--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,7 @@
 #this file log the changing list:
 
      Date      Authoer    Description
+5.   plan to change biTree to a C plus plus Class!!
 4.  2012-7-8   ewentzh   format Test
 3.  2012-7-7   ewentzh   add Bitree to record mem allocation status.
 2.  2012-7-5   ewentzh   Operator new/delete and malloc/free done!
